objects/VisitOps__CateringProductsAndServices__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__ApprovedDietaryTypes__c</fullName>
        <label>Approved Dietary types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetic</fullName>
                </value>
                <value>
                    <fullName>Egg Allergy</fullName>
                </value>
                <value>
                    <fullName>Fish Allergy</fullName>
                </value>
                <value>
                    <fullName>Gluten Free</fullName>
                </value>
                <value>
                    <fullName>Low Cholesterol-Low Fat</fullName>
                </value>
                <value>
                    <fullName>Low Sodium</fullName>
                </value>
                <value>
                    <fullName>Lactose-Free</fullName>
                </value>
                <value>
                    <fullName>Nut or Peanut Allergies</fullName>
                </value>
                <value>
                    <fullName>Shellfish Allergy</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__CatererName__c</fullName>
        <label>Caterer Name</label>
        <referenceTo>VisitOps__Caterer__c</referenceTo>
        <relationshipLabel>Catering Products &amp; Services</relationshipLabel>
        <relationshipName>CateringProductsAndServices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__Caterer__c</fullName>
        <formula>VisitOps__CatererName__r.VisitOps__CatererName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caterer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Ingredients__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ingredients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationFormula__c</fullName>
        <formula>VisitOps__CatererName__r.VisitOps__Location__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__MaximumOrder__c</fullName>
        <label>Maximum Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__MenuItemDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Menu Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__MenuItem__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Menu Item</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__MenuType__c</fullName>
        <label>Menu Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Snack</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__MinimumOrder__c</fullName>
        <label>Minimum Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__OtherDietaryConsiderations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Dietary Considerations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__PricePerperson__c</fullName>
        <label>Price Per Person</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__RequiresWaitstaff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Waitstaff</label>
        <type>Checkbox</type>
    </fields>
    <label>Catering Products &amp; Services</label>
    <nameField>
        <displayFormat>CPS-{0000}</displayFormat>
        <label>Catering Products &amp; Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catering Products &amp; Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VisitOps__Menu_Item_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( VisitOps__MenuType__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>VisitOps__MenuType__c</errorDisplayField>
        <errorMessage>Menu Type is mandatory for Catering Product and Service</errorMessage>
    </validationRules>
</CustomObject>